--- a/package.json
+++ b/package.json
@@ -32,8 +32,11 @@
     "@mantine/nprogress": "^6.0.15",
     "@mantine/spotlight": "^6.0.15",
     "@tabler/icons-react": "^2.23.0",
+    "better-sqlite3": "^8.4.0",
     "dayjs": "^1.11.8",
-    "electron-updater": "^5.3.0"
+    "electron-updater": "^5.3.0",
+    "jotai": "^2.2.1",
+    "mitt": "^3.0.0"
   },
   "devDependencies": {
     "@electron-toolkit/tsconfig": "^1.0.1",
