--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
     "dayjs": "^1.11.8",
     "electron-updater": "^5.3.0",
     "jotai": "^2.2.1",
-    "mitt": "^3.0.0"
+    "mitt": "^3.0.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@electron-toolkit/tsconfig": "^1.0.1",
     "@electron/notarize": "^1.2.3",
+    "@types/better-sqlite3": "^7.6.4",
     "@types/node": "^18.16.16",
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
@@ -49,6 +51,7 @@
     "@vitejs/plugin-react": "^4.0.0",
     "electron": "^24.4.1",
     "electron-builder": "^23.6.0",
+    "electron-extension-installer": "^1.2.0",
     "electron-vite": "^1.0.23",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
