--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "@mantine/nprogress": "^6.0.15",
     "@mantine/spotlight": "^6.0.15",
     "@tabler/icons-react": "^2.23.0",
+    "@uiw/react-monacoeditor": "^3.5.8",
     "better-sqlite3": "^8.4.0",
     "dayjs": "^1.11.8",
     "electron-updater": "^5.3.0",
     "jotai": "^2.2.1",
     "mitt": "^3.0.0",
+    "rxjs": "^7.8.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
