--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@electron-toolkit/preload": "^2.0.0",
     "@electron-toolkit/utils": "^1.0.2",
     "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@mantine/core": "^6.0.15",
     "@mantine/dates": "^6.0.15",
     "@mantine/form": "^6.0.15",
