--- a/.prettierrc.yaml
+++ b/.prettierrc.yaml
@@ -1,4 +1,8 @@
 singleQuote: true
 semi: false
-printWidth: 100
+printWidth: 80
 trailingComma: none
+# bracketSpacing: true
+# singleAttributePerLine: true
+# proseWrap: always
+# bracketSameLine: false
