--- a/tsconfig.web.json
+++ b/tsconfig.web.json
@@ -19,6 +19,8 @@
       "@src/*": [
         "src/*"
       ]
-    }
+    },
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
   }
 }
